<resources>
    <string name="app_name">SpaceX</string>
    <string name="home_title">Home</string>
    <string name="launch_title">Launches</string>
    <string name="news_title">News</string>
    <string name="about_title">About</string>
    <string name="search_title">Search</string>

    <string name="company">By newsoft</string>
    <string name="version">Version 1.0</string>
    <string name="ceo">CEO</string>
    <string name="website">Website</string>

    <string name="all_launches">All</string>
    <string name="past_launches">Past</string>
    <string name="future_launches">Future</string>

    <string name="success_launch">Success</string>
    <string name="pending_launch">Pending</string>

    <string name="days">Dys</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Min</string>
    <string name="seconds">Sec</string>

    <string name="date_time_text">%1$s at %2$s</string>
    <string name="number_text">#%s</string>
    <string name="timer_value">%02d</string>

    <string name="error_text">Error: %s</string>
    <string name="try_again">Try again</string>

    <string name="logo_description">The logotype of application</string>
    <string name="card_arrow_description">The arrow to open/close card</string>
    <string name="bookmark_description">Save news to bookmarks</string>
    <string name="image_of_launch">Image of launch</string>
    <string name="close_description">Close launch details</string>

    <string name="details_core">Core serial</string>
    <string name="details_block">Block</string>
    <string name="reused">Reused</string>
    <string name="details_flight">Flight</string>
    <string name="details_type">Type</string>
    <string name="details_active">Active</string>
    <string name="details_company">Company</string>
    <string name="details_country">Country</string>
    <string name="details_stages">Stages</string>
    <string name="details_boosters">Boosters</string>
    <string name="details_height">Height</string>
    <string name="details_diameter">Diameter</string>
    <string name="details_mass">Mass</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overview">%s Overview</string>
    <string name="meters">%s m</string>
    <string name="kilogram">%s kg</string>
</resources>