<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="error"
            type="java.lang.Throwable" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.launch.LaunchFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_tv"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/error_text(error.message)}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/error_text" />

        <Button
            android:id="@+id/try_again_btn"
            style="@style/TryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/launches_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/toggle_group"
            app:checkedButton="@id/all_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/all_btn"
                style="@style/ToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="14dp"
                android:insetRight="8dp"
                android:text="@string/all_launches" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/past_btn"
                style="@style/ToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="8dp"
                android:insetRight="8dp"
                android:text="@string/past_launches" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/future_btn"
                style="@style/ToggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="8dp"
                android:insetRight="14dp"
                android:text="@string/future_launches" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>