<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="error"
            type="java.lang.Throwable" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_tv"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/error_text(error.message)}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/error_text" />

        <Button
            android:id="@+id/try_again_btn"
            style="@style/TryAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_tv" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/search_bg"
            android:textSize="20sp"
            android:elevation="2dp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/SearchStyle"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_title"
            app:searchIcon="@drawable/ic_search_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/launches_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>